# llm-service

./: README.md  pyproject.toml
.cursor/rules/: fastapi.mdc  llm-contract.mdc
.cursor/skills/llm-contract-maintainer/: SKILL.md
src/config/: groq_limits.yaml  llms.yaml
src/llm_service/: __init__.py  config.py  main.py
src/llm_service/llms/: __init__.py  client.py  config.py  embeddings.py  groq_ratelimit.py
src/llm_service/routers/: __init__.py  health.py  llm.py
tests/: conftest.py  test_contract_against_monolith.py  test_llm_routes.py  test_openapi_contract.py
